--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -43,7 +43,7 @@
             <i class="fas fa-archive"></i>
             {{ range $index, $value := .Params.categories }}
             {{ if gt $index 0 }} {{ print ", " }} {{ end }}
-            <a class="category-link" href="{{ "/categories/" | relLangURL }}{{ $value | urlize }}">{{ $value }}</a>
+            <a class="category-link" href="{{ "categories/" | relLangURL }}{{ $value | urlize }}">{{ $value }}</a>
             {{ end }}
         </div>
         {{ end }}
@@ -52,7 +52,7 @@
             <i class="fas fa-tag"></i>
             {{ range $index, $value := .Params.tags }}
             {{ if gt $index 0 }} {{ print ", " }} {{ end }}
-            <a class="tag-link" href="{{ "/tags/" | relLangURL }}{{ $value | urlize }}" rel="tag">{{ $value }}</a>
+            <a class="tag-link" href="{{ "tags/" | relLangURL }}{{ $value | urlize }}" rel="tag">{{ $value }}</a>
             {{ end }}
         </div>
         {{ end }}
@@ -87,9 +87,9 @@
   </div>
 </body>
 
-<link rel="stylesheet" href={{ "/lib/font-awesome/css/all.min.css" | relURL }}>
-<script src={{ "/lib/jquery/jquery.min.js" | relURL }}></script>
-<script src={{ "/js/main.js" | relURL }}></script>
+<link rel="stylesheet" href={{ "lib/font-awesome/css/all.min.css" | relURL }}>
+<script src={{ "lib/jquery/jquery.min.js" | relURL }}></script>
+<script src={{ "js/main.js" | relURL }}></script>
 {{ if not (isset site.Params "disablecopy") }}
 <script src={{ "js/code-copy.js"  | relURL }}></script>
 {{ end }}
