--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,7 @@
 <footer id="footer">
   <div class="footer-left">
     Copyright  &copy; {{ now.Format "2006" }} {{ if .Site.Copyright }} {{ print .Site.Copyright | markdownify }} {{ else }} {{ print .Site.Title }} {{ end }}
+    <span> | Powered by <a href="https://gohugo.io/">Hugo</a> ❤️ <a href="https://github.com/aimadahsan/hugo-theme-flux">Flux</a></span>
   </div>
   <div class="footer-right">
     <nav>
